--- a/client/admin/css/index.css
+++ b/client/admin/css/index.css
@@ -124,8 +124,8 @@ iframe {
 }
 
 select {
-    width: 103%;
-    height: 25px;
+    width: 100%;
+    height: 30px;
     border:none;
     border-radius: 20px;
     margin-bottom: 10px;
@@ -148,6 +148,7 @@ select {
     margin-top: 10px;
     position: relative;
     left: 80px;
+    font-weight: bold;
 }
 
 
@@ -164,11 +165,11 @@ select {
     box-sizing: border-box;
     width: 150px;
     height: 30px;
+    margin: 15px;
     background-color: rgb(255, 145, 0);
     border: none;
     margin-top: 10px;
     position: relative;
-    left: 80px;
     transition: 0.5s;
 }
 
@@ -182,7 +183,14 @@ select {
     width: 100%;
     height: 100%;
 }
-.viewLink a:focus {
+a:link, a:visited {
     text-decoration: none;
-    outline: none;
+    color:black
+}
+a:active {
+	text-decoration: none;
+}
+
+.search-btns {
+    display: flex;
 }
