--- a/client/user/css/general.css
+++ b/client/user/css/general.css
@@ -1,3 +1,18 @@
+body {
+    background-image: url('../../images/bkg-img.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    width:100%;
+    height:100%;
+}
+
 #app {
     position: relative;
     top: 70px;
