--- a/client/admin/css/index.css
+++ b/client/admin/css/index.css
@@ -3,6 +3,21 @@
     margin: 0px;
 }
 
+body {
+    background-image: url('../../images/bkg-img.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    width:100%;
+    height:100%;
+}
+
 .main-header {
     display: flex;
     background-color: #708FFA;
@@ -21,6 +36,7 @@
     position: relative;
     left: 200px;
 }
+
 .main-header .logo {
     position: relative;
     left: 280px;
@@ -52,7 +68,7 @@
 }
 
 .main-header #goto-user button:hover {
-    background-color: rgb(190, 190, 190);
+    background-color: rgb(250, 215, 215);
     cursor: pointer;
 }
 
@@ -136,7 +152,8 @@ select {
     transition: 0.5s;
 }
 .form  input:focus, select:hover, a:focus{
-    border-bottom: 5px solid black;
+    border: 1px solid rgb(184, 184, 184);
+    box-shadow: 0px 0px 10px black;
     outline: none;
 }
 .form input[type=button] {
