--- a/client/user/css/help.css
+++ b/client/user/css/help.css
@@ -1,42 +1,32 @@
-#display-info {
+.display-help {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    margin: 0px 100px;
-    padding: 0px 10px;
+    height: 300px;
+    width: 100%;
     text-align: center;
 }
 
-.information {
-    max-width: 300px;
-    text-align: center;
-    margin: 20px 100px;
-}
 
-.title {
-    background-color: #708FFA;
-    padding: 10px 50px;
-    width: 100%;
-    border-radius: 20px;
-    border: 1px solid black;
-}
-
-.text {
-    position: relative;
-    left: 30px;
-    padding: 20px;
-    width: 100%;
-    min-height: 100px;
-    max-height: 100px;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-    border-bottom: 1px solid black;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+.help-info {
     background-color: white;
-    transition: 0.3s;
+    border-radius: 10px;
+    margin: 0px 350px;
+    border: 1px solid rgb(190, 190, 190);
+    padding: 40px;
 }
 
-.text:hover {
-    background-color: rgb(236, 236, 236);
-    cursor: pointer;
+.help-info h1 {
+    font-size: 25px;
+}
+.help-info h2 {
+    font-size: 18px;
+    margin: 10px 0px;
+}
+
+.help-info h3 {
+    padding: 10px;
+    border: 1px solid black;
+    margin: 5px 50px;
+    border-radius: 10px;
+    min-width: 376px;
+    font-weight: 400;
 }
