--- a/client/user/css/news.css
+++ b/client/user/css/news.css
@@ -58,7 +58,7 @@ select:focus {
 .display-news {
     padding: 20px;
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     position: relative;
     top: -30px;
     z-index: 0;
@@ -122,15 +122,13 @@ select:focus {
 }
 
 .no-news {
+    display: grid;
     text-align: center;
-    position:relative;
-    left: 350px;
     color:black;
 }
 
 .no-state {
-    position: relative;
-    left: 510px;
+    text-align: center;
 }
 
 
