--- a/client/user/css/header.css
+++ b/client/user/css/header.css
@@ -18,45 +18,61 @@ header {
     position: relative;
 }
 
-.header-items {
-    display: flex;
-    box-sizing: bo;
 
+@media(max-width:1000px) {
+    .header-items {
+        grid-template-columns: 1fr 1fr 1fr!important;
+    }   
+
+    .header-btn {
+        width: 200px!important;
+    }
+}
+
+@media(max-width:770px) {
+    .header-items {
+        grid-template-columns: 1fr 1fr!important;
+    }   
+}
+
+.header-items {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    align-content: center;
+    box-sizing: border-box;
 }
 
 #header-logo {
     height: 70px;
+    text-align: center;
 }
 
 #header-logo img{
     height: 100px;
     width: 100px;
     position: relative;
-    top:-15px;
-    left: 50px;  
+    top: -15px;
 }
 
 .header-btn {
+    text-align: center;
+    align-content: center;
     position: relative;
+
     margin: 15px;
-    padding: 9px 0px 9px 0px;
+    padding: 10px 10px;
+
+    border: 1px solid #FFFFFF;
+    border-radius: 30px;
+
     font-weight: 1000;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    left: 100px;
-    border: 1px solid #FFFFFF;
-    box-sizing: border-box;
-    border-radius: 30px;
 }
 
-.header-btn a {
+.header-items a {
     color: white;
-    padding: 10px 30px 10px 30px;
-    box-sizing: border-box;
-    border-radius: 30px;
-    transition: 0.5s;
 }
-
-.header-btn a:hover {
+.header-items a:hover {
     background-color: white;
     color: #708FFA;
 }
