--- a/client/user/css/help.css
+++ b/client/user/css/help.css
@@ -10,7 +10,7 @@
     background-color: white;
     border-radius: 10px;
     margin: 0px 350px;
-    border: 1px solid rgb(190, 190, 190);
+    border: 1px solid black;
     padding: 40px;
 }
 
